finalize project - comments, final changes, etc.
Signed-off-by: CyberFlame <cyberflameu@gmail.com>

--- a/templates/auth_needed.html
+++ b/templates/auth_needed.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Authentication required</h1>
+    <h1>Authentication required (or insufficient permission)</h1>
     <p> Please visit the registration or login pages using the navigation bar on your left, then retry.</p>
 {% endblock content %}
 ```
