--- a/templates/games.html
+++ b/templates/games.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block head %}
+    <style>
+        #list ul {
+            padding-left: 50px;
+        }
+    </style>
     <script type = "module">
         import ResourceManager from '../static/js/utils.js';
 
@@ -9,7 +14,6 @@
         const HTTP_409_CONFLICT = 409;
         const HTTP_404_NOT_FOUND = 404;
         const HTTP_410_GONE = 410;
-        console.log(auth_token);
 
         window.editGame = async function editGame (id) {
             if (id) {
@@ -75,7 +79,7 @@
 {% block content %}
     <h1>Games</h1>
     <p>This is a list of current games</p>
-    <ul>
+    <ul id = 'list'>
         {% for game in games %}
             <li>
                 {{ game.name }}
