--- a/templates/register.html
+++ b/templates/register.html
@@ -24,8 +24,13 @@
         <label for = "password">Password</label>
         <input type = "password" id = "password" name = "password" autocomplete = 'new-password' required><br>
 
+        <!-- These are hard-coded to reduce overhead, but could easily be adjusted to be dynamic-->
         <label for = "role">Role</label>
-        <input type = "text" id = "role" name = "role" required><br>
+        <select name = "role" id = "role" required>
+            <option value = "student">Student</option>
+            <option value = "leader">Leader</option>
+            <option value = "teacher">Teacher</option>
+        </select><br>
 
         <label for = "first_name">First Name</label>
         <input type = "text" id = "first_name" name = "first_name" autocomplete = 'given-name' required><br>
